<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.lab10.googlemapslocationupdate.view.GoogleMapsActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3">

        <EditText
            android:id="@+id/latitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:ems="5"
            android:hint="@string/latitude"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/longitude_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:ems="5"
            android:hint="@string/longitude"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/navigate_to_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_vertical"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:gravity="center"
            android:text="@string/navigate_to_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:text="@string/map_type" />

        <Spinner
            android:id="@+id/map_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:entries="@array/map_types"
            android:spinnerMode="dropdown" />

    </GridLayout>

    <Button
        android:id="@+id/location_updates_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorRed"
        android:text="@string/start_location_updates" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
